# Pandasai-MongoDB-Analysis

./: .env.sample  .gitignore  README.md  main.py  pandas_ai.py  pandas_functions.py  pyproject.toml
cache/: cache_db_0.11.db
